--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
 
 
     <application
@@ -28,7 +30,9 @@
             android:exported="true" />
         <activity android:name=".SecondActivity" />
         <activity android:name=".VisiActivity" />
-        <activity android:name=".QrActivity" />
+        <activity android:name=".QrActivity"
+            android:screenOrientation="portrait"
+            android:exported="true" />
         <activity android:name=".AdiwiyataActivity" />
     </application>
 </manifest>
