--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".QrActivity"
             android:screenOrientation="portrait"
             android:exported="true" />
+        <activity android:name="com.journeyapps.barcodescanner.CaptureActivity" android:screenOrientation="fullSensor" tools:replace="android:screenOrientation" />
         <activity android:name=".AdiwiyataActivity" />
     </application>
 </manifest>
